# farefiling

./: .gitignore  README.md  gg_output.xlsx  pyproject.toml  requirements.txt
app/: CHANGELOG.md  app.py  config.toml  gg_fare_filing.xlsx  gg_fare_input.xlsx  output.xlsx  pyproject.toml  test.py
app/__pypackages__/3.9/lib/attrs-22.1.0.dist-info/: RECORD
app/__pypackages__/3.9/lib/coverage-6.4.2.dist-info/: RECORD
app/__pypackages__/3.9/lib/et_xmlfile-1.1.0.dist-info/: RECORD
app/__pypackages__/3.9/lib/iniconfig-1.1.1.dist-info/: RECORD
app/__pypackages__/3.9/lib/numpy-1.23.1.dist-info/: RECORD
app/__pypackages__/3.9/lib/openpyxl-3.0.10.dist-info/: RECORD
app/__pypackages__/3.9/lib/packaging-21.3.dist-info/: RECORD
app/__pypackages__/3.9/lib/pandas-1.4.3.dist-info/: RECORD
app/__pypackages__/3.9/lib/pluggy-1.0.0.dist-info/: RECORD
app/__pypackages__/3.9/lib/py-1.11.0.dist-info/: RECORD
app/__pypackages__/3.9/lib/pydantic-1.9.1.dist-info/: RECORD
app/__pypackages__/3.9/lib/pyparsing-3.0.9.dist-info/: RECORD
app/__pypackages__/3.9/lib/pytest-7.1.2.dist-info/: RECORD
app/__pypackages__/3.9/lib/python_dateutil-2.8.2.dist-info/: RECORD
app/__pypackages__/3.9/lib/pytz-2022.1.dist-info/: RECORD
app/__pypackages__/3.9/lib/six-1.16.0.dist-info/: RECORD
app/__pypackages__/3.9/lib/toml-0.10.2.dist-info/: RECORD
app/__pypackages__/3.9/lib/typing_extensions-4.3.0.dist-info/: RECORD
app/src/datamodels/: datatype_mapping.py
app/src/datamodels/workpackage/: workpackage_enums.py
app/src/modules/: utilities.py
app/test/: test_gen_fare_basis.py  test_gen_fare_combinations.py  test_gen_fare_price.py
farefiling/: .coveragerc  app.py
farefiling/datamodels/workpackage/: workpackage.py
farefiling/modules/: utilities.py
gg-fare-proposal/: gg_fare_proposal.xlsx  gg_output.xlsx  pyproject.toml
gg-fare-proposal/gg_fare_proposal/: app.py  helper.py
gg-fare-proposal/tests/: test_app.py  test_helper.py
src/farefiling/: app.py  helper.py
src/farefiling/models/: base.py  cabin_mapping.py  fare_combination.py  input.py  (+2 more)
tests/: test_gen_fare_basis.py  test_gen_fare_combinations.py  test_gen_fare_price.py
