[project]
name = "farefiling"
dynamic = ["version"]
description = ""
authors = [{ name = "Ping Lin", email = "pingli88@gmail.com" }]
dependencies = [
    "et-xmlfile==1.1.0",
    "numpy==1.23.1",
    "openpyxl==3.0.10",
    "pandas==1.4.3",
    "pydantic==1.9.1",
    "python-dateutil==2.8.2",
    "pytz==2022.1",
    "six==1.16.0",
    "toml==0.10.2",
    "typing-extensions==4.3.0",
]
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.pdm]
# version = { source = "file", path = "mypackage/__version__.py" }
version = { source = "scm" }

[tool.pdm.build]
includes = ["farefiling"]

[tool.pdm.dev-dependencies]
test = ["pytest>=7.1.2", "coverage>=6.4.2"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
