[project]
name = "farefiling"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["openpyxl>=3.1.5", "pandas>=2.3.3", "pydantic>=2.12.4"]

[project.scripts]
gg = "farefiling.app:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
