[tool.poetry]
name = "gg-fare-proposal"
version = "0.1.0"
description = ""
authors = ["Ping Lin <pingli88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pydantic = "^2.7.1"
pandas = "^2.2.2"
openpyxl = "^3.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
